--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ h1{
     color: blueviolet;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
-    font-size: 50px;
-    
+    font-size: 50px; 
+}
+p{
+    color: crimson;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300;
+    font-size: 20px; 
 }
