--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h1{
     font-size: 50px; 
 }
 p{
-    color: crimson;
+    color: mediumorchid;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 300;
     font-size: 20px; 
