--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,62 @@
-h1{
-    color: blueviolet;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 300;
-    font-size: 50px; 
+body{
+    font-family: 'Raleway', sans-serif;
 }
-p{
-    color: mediumorchid;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 300;
-    font-size: 20px; 
+header{
+    border-bottom: 1px solid #4d4d4dad;
+    padding: 10px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+}
+.navbar-nav .nav-item{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight:600;
+}
+.navbar-nav .nav-item .nav-link, .navbar .navbar-brand{
+    color: #ffff;
+}
+.navbar-nav .nav-item .nav-link.active,.navbar-nav .nav-item .nav-link:hover,  .navbar .navbar-brand:hover{
+    color: blanchedalmond;
+}
+section.banner-section{
+    height: 100vh;
+    background: url(../images/bnr3.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.banner-section .overflow{
+    background-color: rgba(20, 20, 20, 0.70);
+    width: 100%;
+    height: 100%;
+}
+.banner-section .banner-content{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.banner-section .banner-content h1{
+    font-size: 60px;
+    font-weight: 900;
+    color: #ffff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+
+}
+.banner-section .banner-content p{
+    color: #ffff;
+    font-weight: 500;
+    margin: 30px 0px;
+}
+.banner-section .banner-content button{
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 14px;
+    text-transform: uppercase;
 }
