--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,37 @@ section.banner-section{
     font-size: 14px;
     text-transform: uppercase;
 }
+
+.column-grid{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #e4e4e4;
+    column-gap: 10px;
+    row-gap: 10px;
+    padding: 20px;
+    color: white;
+    box-shadow: 0px 0px 50px #3b64ec80;
+}
+.column-1, .column-2, .column-3, .column-4, .column-5, .column-6{
+    padding: 20px;
+    margin: 10px;
+    font-size: 25px;
+    text-align: center;
+}
+.column-1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+.column-3{
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.column-4{
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.column-5{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
