--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,103 @@ section.banner-section{
     grid-column-start: 1;
     grid-column-end: 3;
 }
+
+.flex-section{
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    border: 1px solid #e000e0;
+    margin: 40px auto;
+    flex-wrap: wrap;
+}
+
+.flex-items{ 
+    padding: 20px;
+    background-color: crimson;
+    color: white;
+    margin: 10px; 
+    font-size: 25px;
+    width: calc(25% - 20px);  /* Margin Left and right each 10px */
+    text-align: center;
+}
+
+.main:hover .prokiti{
+    background: skyblue;
+}
+.prokiti{
+    height: 600px;
+    background: black;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
+    margin: 0px auto;
+    padding: 350px 0 0 0;
+    position: relative;
+    transition: 2.5s;
+    overflow: hidden;
+}
+
+.g-items{
+    background-color: green;
+}
+.surjo{
+    grid-column-start: 1;
+    grid-column-end: 9;
+    width: 150px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    height: 150px;
+    margin: auto;
+    border-radius: 50%;
+    background-image: linear-gradient(#ffbb00, #ff3c01);
+    box-shadow: 0px 0px 20px #ff00009a;
+    transition: 2.5s;
+}
+
+.prokiti:hover .surjo{
+    top: 20%;
+}
+.wave-1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    transform: rotate(45deg);
+    border-radius: 30% 0 0 0;
+    height: 250px;
+    width: 250px;
+    margin: auto;
+}
+.wave-2{
+    grid-column-start: 3;
+    grid-column-end: 5;
+    transform: rotate(45deg);
+    border-radius: 30% 0 0 0;
+    height: 250px;
+    width: 250px;
+    margin: auto;
+}
+.wave-3{
+    grid-column-start: 5;
+    grid-column-end: 7;
+    transform: rotate(45deg);
+    border-radius: 30% 0 0 0;
+    height: 250px;
+    width: 250px;
+    margin: auto;
+}
+.wave-4{
+    grid-column-start: 7;
+    grid-column-end: 9;
+    transform: rotate(45deg);
+    border-radius: 30% 0 0 0;
+    height: 250px;
+    width: 250px;
+    margin: auto;
+}
+.pahar{
+    grid-column-start: 1;
+    grid-column-end: 9;
+    height: 300px;
+    margin-top: -130px;
+    z-index: 5;
+}
