--- a/css/style.css
+++ b/css/style.css
@@ -1,118 +1,6 @@
 body{
     font-family: 'Raleway', sans-serif;
 }
-header{
-    border-bottom: 1px solid #4d4d4dad;
-    padding: 10px 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-}
-.navbar-nav .nav-item{
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight:600;
-}
-.navbar-nav .nav-item .nav-link, .navbar .navbar-brand{
-    color: #ffff;
-}
-.navbar-nav .nav-item .nav-link.active,.navbar-nav .nav-item .nav-link:hover,  .navbar .navbar-brand:hover{
-    color: blanchedalmond;
-}
-section.banner-section{
-    height: 100vh;
-    background: url(../images/bnr3.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-.banner-section .overflow{
-    background-color: rgba(20, 20, 20, 0.70);
-    width: 100%;
-    height: 100%;
-}
-.banner-section .banner-content{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.banner-section .banner-content h1{
-    font-size: 60px;
-    font-weight: 900;
-    color: #ffff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-
-}
-.banner-section .banner-content p{
-    color: #ffff;
-    font-weight: 500;
-    margin: 30px 0px;
-}
-.banner-section .banner-content button{
-    border-radius: 30px;
-    padding: 10px 30px;
-    font-size: 14px;
-    text-transform: uppercase;
-}
-
-.column-grid{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: #e4e4e4;
-    column-gap: 10px;
-    row-gap: 10px;
-    padding: 20px;
-    color: white;
-    box-shadow: 0px 0px 50px #3b64ec80;
-}
-.column-1, .column-2, .column-3, .column-4, .column-5, .column-6{
-    padding: 20px;
-    margin: 10px;
-    font-size: 25px;
-    text-align: center;
-}
-.column-1{
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.column-3{
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-.column-4{
-    grid-column-start: 2;
-    grid-column-end: 4;
-}
-
-.column-5{
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-
-.flex-section{
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    border: 1px solid #e000e0;
-    margin: 40px auto;
-    flex-wrap: wrap;
-}
-
-.flex-items{ 
-    padding: 20px;
-    background-color: crimson;
-    color: white;
-    margin: 10px; 
-    font-size: 25px;
-    width: calc(25% - 20px);  /* Margin Left and right each 10px */
-    text-align: center;
-}
 
 .main:hover .prokiti{
     background: skyblue;
@@ -146,6 +34,26 @@ section.banner-section{
     background-image: linear-gradient(#ffbb00, #ff3c01);
     box-shadow: 0px 0px 20px #ff00009a;
     transition: 2.5s;
+}
+.chad{
+    grid-column-start: 1;
+    grid-column-end: 9;
+    width: 100px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    height: 100px;
+    margin: auto;
+    border-radius: 50%;
+    background-image: linear-gradient(#d8d8d8, #696969);
+    box-shadow: 0px 0px 20px #ffffff9a;
+    transition: 3s;
+    transition-delay: 0.5s;
+}
+
+.prokiti:hover .chad{
+    top: 150%;
 }
 
 .prokiti:hover .surjo{
